# multilingual-sentiment-analysis

./: .gitignore  README.md  Version 1.ipynb  pyproject.toml  requirements.txt
configs/: default.json
docs/: INTERVIEW_GUIDE.md  MODERNIZATION_AUDIT.md
src/multilingual_sentiment/: __init__.py  config.py  data.py  metrics.py  modeling.py  predict.py  train.py
